<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">新华健康</string>
    <string name="active">活动</string>
    <string name="account_hint_str">请输入手机号、邮箱或身份证号</string>
    <string name="aboutus">关于我们</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="attention_matters_1">★	请您在检前3日保持正常饮食，体检前一天应注意休息、勿饮酒及食用高脂肪、高糖、高蛋白及易胀气的食品（如豆类等）食物、避免剧烈运动，以免影响检查结果。</string>
    <string name="attention_matters_2">★	如有抽血、腹部超声、C13呼吸实验等空腹检查项目，请在检前一天晚上20:00后禁食。</string>
    <string name="attention_matters_3">★	患有慢性病需要长期服药者（如高血压、糖尿病、心脏病、抗凝等药物），请随身携带常规药品；体检当日可少量清水服用日常药物并告知问诊医生。</string>
    <string name="attention_matters_4">★	老人及行动不便者需家人陪同体检。</string>
    <string name="attention_matters_5">【女士体检注意事项】</string>
    <string name="attention_matters_6">★	月经期的女性请提前告知客服人员，避免检查妇科、阴式彩超及尿便常规；如需检查以上项目，可办理延期续检。</string>
    <string name="attention_matters_7">★	妇科及阴式彩超检查需在月经干净后3天后进行，体检前日请暂停阴道用药与冲洗，避免性生活。</string>
    <string name="attention_matters_8">★	选择子宫附件彩超需提前憋尿或做完空腹项目后再喝水憋尿检查；选择阴式彩超检查，不用憋尿。</string>
    <string name="attention_matters_9">★	半年内有生育计划的受检者，不建议做放射及双能骨密度检查；怀孕或可能已受孕受检者，除不做放射及双能骨密度检查外还应避免妇科检查及阴式超声检查。</string>
    <string name="attention_matters_10">★	未婚女性如果自愿检查妇科、阴式超声项目，请签署妇科、阴式超声检查知情同意书后方可检查。</string>
    <string name="add_medicalrecord">添加新病历</string>
    <string name="add_ta_medicalrecord">添加TA的病历</string>
    <string name="add_new_member">添加新成员</string>
    <string name="add_new_member_succeed">添加新成员成功！</string>
    <string name="add_member_is">您要添加的成员是：</string>
    <string name="add_member_list">加入成员列表</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="bind_existed_account">绑定已有账户</string>
    <string name="borndate">出生日期</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="changepwd">修改密码</string>
    <string name="child_forum">板块筛选</string>
    <string name="cancle">取消</string>
    <string name="collect">收藏</string>
    <string name="confirm">确认</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="create_new_account">创建新账户</string>
    <string name="canusetime">可用次数：</string>
    <string name="default_string">默认</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">下载中...</string>
    <string name="Did_not_download">未下载</string>
    <string name="Download_the_pictures_new">下载图片：</string>
    <string name="Download_the_pictures">下载图片： 0%</string>
    <string name="email">邮箱</string>
    <string name="effecttime">个人应付：</string>
    <string name="expiretime">个人已付：</string>
    <string name="xinhuapay">新华付费：</string>
    <string name="qiyepay">企业付费：</string>
    <string name="freepay">免费：</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="forget_pwd_str">忘记密码?</string>
    <string name="file">[文件]</string>
    <string name="female">女</string>
    <string name="focus">关注</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="group">圈子</string>
    <string name="gorup_not_found">找不到这个群组</string>
    <string name="group_chat">群聊</string>
    <string name="hot_topic">热门话题</string>
    <string name="hot_search">热门搜索</string>
    <string name="Have_downloaded">已下载</string>
    <string name="input_type_str">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="intput_sms_str">请输入您收到的短信验证码</string>
    <string name="input_account">绑定已有账户或创建新账户</string>
    <string name="input_pwd">输入已有账户或新账户密码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_again_new_pwd">请再次输入新密码</string>
    <string name="ismarry">婚否</string>
    <string name="idcardnum">身份证号</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="login_str">登录</string>
    <string name="logout_str">注销</string>
    <string name="login_registration">点击注册</string>
    <string name="login_account1">请输入手机号</string>
    <string name="login_psw1">请输入密码</string>
    <string name="login_confirmpwd">确认登录密码</string>
    <string name="login_agree">注册即代表同意健康管家的隐私声明及服务条款</string>
    <string name="login_getmsgpwd">获取验证码</string>
    <string name="login_setsms">验证码</string>
    <string name="login_setpwd">设置登录密码</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="login_QQ">QQ登录</string>
    <string name="login_zhifubao">支付宝登录</string>
    <string name="login_baidu">百度登录</string>
    <string name="login_360">360登录</string>
    <string name="latest_image">最近照片</string>
    <string name="married">已婚</string>
    <string name="marital_status">婚姻状况</string>
    <string name="member_nickname">成员昵称</string>
    <string name="member_gender">成员性别</string>
    <string name="mobile_commit_success">手机验证成功，请输入您的新密码</string>
    <string name="myfavorite">我的收藏</string>
    <string name="mycheckupaccount">亲情账户</string>
    <string name="myserviceorder">预约服务单</string>
    <string name="mobile">手机</string>
    <string name="male">男</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="mr_time">就诊时间</string>
    <string name="mr_Dr_name">诊断医生</string>
    <string name="mr_hosipital">就诊医院</string>
    <string name="mr_department">就诊科室</string>
    <string name="mr_diagnose">病情诊断</string>
    <string name="mr_add_video">添加影像资料(您还可添加%1$d张图片)</string>
    <string name="mr_media">影像资料</string>
    <string name="mr_add_audio">添加音频资料</string>
    <string name="mr_audio">音频资料</string>
    <string name="mr_press_recordaudio">按住录音</string>
    <string name="mr_save">确定并保存</string>
    <string name="mr_continueadd_drug">继续添加药品</string>
    <string name="mr_add_drug">添加药品</string>
    <string name="mr_druginfo">药品信息</string>
    <string name="new_str">NEW</string>
    <string name="next">下一步</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="new_publish">最新发布</string>
    <string name="new_reply">最新回复</string>
    <string name="nickname">昵称</string>
    <string name="not_download">未下载：</string>
    <string name="name">姓名</string>
    <string name="psd_hint_str">请输入密码</string>
    <string name="picture">[图片]</string>
    <string name="publish_topic">发布话题</string>
    <string name="product">产品数量：</string>
    <string name="paymethod">付费方式：</string>
    <string name="payable">个人应付：</string>
    <string name="market_price">市场价格：</string>
    <string name="sell_price">销售价格：</string>
    <string name="payed">个人已付：</string>
    <string name="qr_scan">扫描条形码</string>
    <string name="re_doenload">重新下载</string>
    <string name="reply">回复</string>
    <string name="regist_str">注册</string>
    <string name="regist_desc1_str">注册即代表同意健康管家的服务条款及隐私条款。</string>
    <string name="regist_desc2_str">注册即送100体检优惠券</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="resend">重发</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="return_homepage">返回首页</string>
    <string name="sertext">可用服务：</string>
    <string name="sertext1">可用服务类型：</string>
    <string name="startappointment">开始预约</string>
    <string name="set_setuserinfo">设置个人基本信息</string>
    <string name="send_verify_code_str">发送验证码</string>
    <string name="submit_str">提交</string>
    <string name="sex">性别</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="sure">确定</string>
    <string name="topic">话题</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="unmarried">未婚</string>
    <string name="usestate">未使用</string>
    <string name="user_other_account">使用其他账号登录</string>
    <string name="voice">声音</string>
    <string name="vouchertext">凭证号</string>
    <string name="voice_call">[语音通话]</string>
    <string name="verify_mobile_str">验证手机号</string>
    <string name="video">[视频]</string>
    <string name="verify_mobile_reg_str">验证手机号并注册</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="certype">证件类型</string>
    <string name="cernum">证件号码</string>
    <string name="phone_or_email">手机号/邮箱</string>
    <string name="multi_user">有多个体检账户,请选择您的账户</string>
    <string name="choice">选择</string>
    <string name="use">使用</string>
    <string name="packagedetail">套餐详情</string>
    <string name="packageitem">套餐项</string>
    <string name="checkupuser">体检人</string>
    <string name="voucher">凭证</string>
    <string name="checkuppackage">套餐</string>
    <string name="additem">体检项</string>
    <string name="time">时间</string>
    <string name="choiceorg">机构</string>
    <string name="preview">预览</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
</resources>