<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green_common"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <RadioGroup
            android:id="@+id/com_child_group"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/com_child_title_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/child_publish"
                style="@style/TextSize16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/com_child_left"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/new_publish"
                android:textColor="@drawable/com_child_title_text_color" />

            <RadioButton
                android:id="@+id/child_reply"
                style="@style/TextSize16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/com_child_middle"
                android:button="@null"
                android:gravity="center"
                android:text="@string/new_reply"
                android:textColor="@drawable/com_child_title_text_color" />

            <RadioButton
                android:id="@+id/child_hot"
                style="@style/TextSize16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/com_child_right"
                android:button="@null"
                android:gravity="center"
                android:text="@string/hot_topic"
                android:textColor="@drawable/com_child_title_text_color" />
        </RadioGroup>
    </LinearLayout>

    <com.pact.healthapp.view.LJListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray_backgroud" >

        <Button
            android:id="@+id/com_child_focus"
            style="@style/TextSize19"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:drawableTop="@drawable/community_follow_selector4cb"
            android:text="@string/focus"
            android:textColor="@color/green_common"
            android:textSize="10dp" />

        <Button
            android:id="@+id/com_child_publish_topic"
            style="@style/TextSize19"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/com_child_publish_default"
            android:text="@string/publish_topic"
            android:textColor="@color/gray_dark" />
    </LinearLayout>

</LinearLayout>